fix: mobile truncate identity (#604)

--- a/resources/css/_general.css
+++ b/resources/css/_general.css
@@ -538,6 +538,10 @@ body {
 .delegate-name-truncate {
     @apply w-full truncate;
 }
+.delegate-name-truncate-listing {
+    @apply delegate-name-truncate;
+    max-width: 7rem;
+}
 .delegate-name-truncate-prefix {
     @apply delegate-name-truncate;
     max-width: 6rem;
